--- a/NetflixRoulette/NetflixRouletteSharp.csproj
+++ b/NetflixRoulette/NetflixRouletteSharp.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NetflixRouletteSharp</RootNamespace>
-    <AssemblyName>NetflixRoulette</AssemblyName>
+    <AssemblyName>NetflixRouletteSharp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
